fix: do not change icon if title of organization is too long

--- a/webapp/assets/css/controls.css
+++ b/webapp/assets/css/controls.css
@@ -65,10 +65,10 @@ html.sapUiMedia-Std-Tablet .boxItemRenderer:hover {
 }
 
 .personItemRendererInitials {
-    width: 3rem;
+    width: 4rem;
     height: 3rem;
     border-radius: 50%;
-    margin: 0.725rem 1.4rem;
+    margin: 0.2rem 0.2rem;
 }
 
 .personItemRendererInitialsText {
@@ -112,6 +112,7 @@ html.sapUiMedia-Std-Tablet .boxItemRenderer:hover {
     padding-left: 8px;
     justify-content: center;
     flex-grow: 1;
+    width: 100%;
 }
 
 .orgItemRenderer.sapMLIBActive,
